--- a/index.html
+++ b/index.html
@@ -260,14 +260,14 @@
                                 <button type="button" class="btn btn-lg btn-block">Send</button>
                             </form>
                         </div>
-                        <div class="col-md-12 entranceContactRight">
+                        <div class="col-md-6 entranceContactRight">
                             <a href="https://www.facebook.com/zachitamam" target="_blank">
-                                <img class="contact-img" src="pics/facebook-3-xxl.png" alt="Facebook">
+                                <img class="contact-img" src="pics/facebook-3-xxl.png" alt="Facebook">Find me on Facebook!
                             </a>
                         </div>
-                        <div class="col-md-12 entranceContactRight">
+                        <div class="col-md-6 entranceContactRight">
                             <a href="https://www.linkedin.com/in/tzahi-tamam-65946ba9/" target="_blank">
-                                <img class="contact-img" src="pics/linkedin-3-xxl.png" alt="Linkedin">
+                                <img class="contact-img" src="pics/linkedin-3-xxl.png" alt="Linkedin">Find me on Linkedin!
                             </a>
                         </div>
                     </div>
