--- a/index.html
+++ b/index.html
@@ -159,11 +159,11 @@
             </div>
         </section>
         <span id="about-end"></span>
-        <section class="dark-background" id="portfolio">
-            <div class="container entranceUp">
-                <h1>My Portfolio</h1>
+        <section class="dark-background " id="portfolio">
+            <div class="container entranceUp ">
+                <h1 re>My Portfolio</h1>
                 <div class="card-columns">
-                    <div class="card">
+                    <div class="card rellax" data-rellax-speed="-3">
                         <img class="card-img-top" src="..." alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Card title that wraps to a new line</h5>
@@ -171,7 +171,7 @@
                                 additional content. This content is a little bit longer.</p>
                         </div>
                     </div>
-                    <div class="card p-3">
+                    <div class="card p-3 rellax" data-rellax-speed="1">
                         <blockquote class="blockquote mb-0 card-body">
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
                             <footer class="blockquote-footer">
@@ -181,7 +181,7 @@
                             </footer>
                         </blockquote>
                     </div>
-                    <div class="card">
+                    <div class="card rellax" data-rellax-speed="0">
                         <img class="card-img-top" src="..." alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
@@ -190,7 +190,7 @@
                             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                         </div>
                     </div>
-                    <div class="card bg-primary text-white text-center p-3">
+                    <div class="card bg-primary text-white text-center p-3 rellax" data-rellax-speed="-1">
                         <blockquote class="blockquote mb-0">
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat.</p>
                             <footer class="blockquote-footer">
@@ -200,7 +200,7 @@
                             </footer>
                         </blockquote>
                     </div>
-                    <div class="card text-center">
+                    <div class="card text-center rellax" data-rellax-speed="-2">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">This card has supporting text below as a natural lead-in to additional
@@ -208,10 +208,8 @@
                             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                         </div>
                     </div>
-                    <div class="card">
-                        <img class="card-img" src="..." alt="Card image">
-                    </div>
-                    <div class="card p-3 text-right">
+
+                    <div class="card p-3 text-right  rellax" data-rellax-speed="-3">
                         <blockquote class="blockquote mb-0">
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
                             <footer class="blockquote-footer">
@@ -221,7 +219,7 @@
                             </footer>
                         </blockquote>
                     </div>
-                    <div class="card">
+                    <div class="card rellax" data-rellax-speed="1">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
