--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg fixed-top row" id="navbar-style">
+    <nav class="navbar .navbar-dark navbar-expand-lg fixed-top row" id="navbar-style">
         <p class="navbar-brand ml-5 nav-text">Tzahi Tamam</p>
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        <button class="navbar-toggler "style="color:aliceblue" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class=".navbar-dark .navbar-toggler-icon" ></span>
         </button>
         <div class="container">
             <!-- <div class="col"></div> -->
