--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       src="https://code.jquery.com/jquery-3.4.1.js"
       integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
       crossorigin="anonymous"
-    ></!DOCTYPE>
+    ></script>
     <script
       defer
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
@@ -60,8 +60,8 @@
       <p class="navbar-brand ml-5 nav-text">Tzahi Tamam</p>
 
       <button
-        class="navbar-toggler "
-        style="color:aliceblue"
+        class="navbar-toggler"
+        style="color: aliceblue;"
         type="button"
         data-toggle="collapse"
         data-target="#navbarSupportedContent"
@@ -70,7 +70,7 @@
         aria-label="Toggle navigation"
       >
         <span class="navbar-toggler-icon">
-          <i class="fas fa-bars" style="color:#fff; font-size:28px;"></i>
+          <i class="fas fa-bars" style="color: #fff; font-size: 28px;"></i>
         </span>
       </button>
       <div class="container">
@@ -78,20 +78,20 @@
         <div class="row">
           <div class="col-4"></div>
           <div class="collapse navbar-collapse col" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto ">
+            <ul class="navbar-nav mr-auto">
               <li class="nav-item">
                 <a class="nav-link" id="homeNav" href="#home">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " id="aboutNav" href="#about">About</a>
+                <a class="nav-link" id="aboutNav" href="#about">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " id="portfolioNav" href="#portfolio"
+                <a class="nav-link" id="portfolioNav" href="#portfolio"
                   >Portfolio</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link " id="contactNav" href="#contact"
+                <a class="nav-link" id="contactNav" href="#contact"
                   >Contact Me</a
                 >
               </li>
@@ -105,37 +105,37 @@
       <div class="cover-text text-left">
         <div class="snowflakes" aria-hidden="true">
           <div class="snowflake">
-          ❅
+            ❅
           </div>
           <div class="snowflake">
-          ❅
+            ❅
           </div>
           <div class="snowflake">
-          ❆
+            ❆
           </div>
           <div class="snowflake">
-          ❄
+            ❄
           </div>
           <div class="snowflake">
-          ❅
+            ❅
           </div>
           <div class="snowflake">
-          ❆
+            ❆
           </div>
           <div class="snowflake">
-          ❄
+            ❄
           </div>
           <div class="snowflake">
-          ❅
+            ❅
           </div>
           <div class="snowflake">
-          ❆
+            ❆
           </div>
           <div class="snowflake">
-          ❄
+            ❄
           </div>
         </div>
-        <div class="animated wow fadeInUp " data-wow-duration="2s">
+        <div class="animated wow fadeInUp" data-wow-duration="2s">
           <h1 class="lead">Tzahi Tamam</h1>
           <p class="lead">QA Engineer - Front End Web Developer</p>
           <!-- <a href="#portfolio" role="button" class="btn btn-lg">My Portfolio</a> -->
@@ -144,14 +144,17 @@
     </div>
     <div class="bgc-container">
       <span id="home-end"></span>
-      <section class="section overlap-section-above " id="about">
-        <div class="container ">
+      <section class="section overlap-section-above" id="about">
+        <div class="container">
           <div class="row">
-            <div class="col-md-12  cover-text-black ">
-              <h1 class="text-center wow bounceInDown"  data-wow-duration="2s">About me</h1>
+            <div class="col-md-12 cover-text-black">
+              <h1 class="text-center wow bounceInDown" data-wow-duration="2s">
+                About me
+              </h1>
               <div class="row">
                 <div
-                  class="card col-md-6 col-sm-12 card-no-border wow bounceInUp wow fadeInLeft"  data-wow-duration="2s"
+                  class="card col-md-6 col-sm-12 card-no-border wow bounceInUp wow fadeInLeft"
+                  data-wow-duration="2s"
                 >
                   <div class="card-body">
                     <h3 class="card-title">QA Engineer</h3>
@@ -162,8 +165,11 @@
                     </p>
                   </div>
                 </div>
-                <div class="col-md-6 wow fadeInRight "  data-wow-duration="2s">
-                  <div class=" row col-md-6 text-center img-skills"  data-wow-duration="2s">
+                <div class="col-md-6 wow fadeInRight" data-wow-duration="2s">
+                  <div
+                    class="row col-md-6 text-center img-skills"
+                    data-wow-duration="2s"
+                  >
                     <img src="pics/html5.svg" class="img-fluid" id="img01" />
                     <img
                       src="pics/CSS3_logo_and_wordmark.svg.png"
@@ -173,14 +179,15 @@
                     />
                   </div>
                 </div>
-                <div class="col-md-6 wow fadeInRight " data-wow-duration="2s">
-                  <div class=" row col-md-6 text-center img-skills">
+                <div class="col-md-6 wow fadeInRight" data-wow-duration="2s">
+                  <div class="row col-md-6 text-center img-skills">
                     <img src="pics/java.jpeg" class="img-fluid" id="img03" />
                     <img src="pics/js-logo.png" class="img-fluid" id="img04" />
                   </div>
                 </div>
                 <div
-                  class="card col-md-6 col-sm-12 card-no-border  wow fadeInLeft" data-wow-duration="2s"
+                  class="card col-md-6 col-sm-12 card-no-border wow fadeInLeft"
+                  data-wow-duration="2s"
                 >
                   <div class="card-body">
                     <h3 class="card-title">Automation QA Engineer</h3>
@@ -192,7 +199,8 @@
                 </div>
 
                 <div
-                  class="card col-md-6 col-sm-12 card-no-border  wow fadeInLeft" data-wow-duration="2s"
+                  class="card col-md-6 col-sm-12 card-no-border wow fadeInLeft"
+                  data-wow-duration="2s"
                 >
                   <div class="card-body">
                     <h3 class="card-title">Full Stack</h3>
@@ -202,11 +210,11 @@
                     </p>
                   </div>
                 </div>
-                <div class="col-md-6 wow fadeInRight " data-wow-duration="2s">
-                  <div class=" row col-md-6 text-center img-skills">
+                <div class="col-md-6 wow fadeInRight" data-wow-duration="2s">
+                  <div class="row col-md-6 text-center img-skills">
                     <img
                       src="pics/bootstrap-logo-png-logo-228.png"
-                      class=" col img-fluid"
+                      class="col img-fluid"
                       id="img05"
                     />
                     <img
@@ -222,8 +230,8 @@
         </div>
       </section>
       <span id="about-end"></span>
-      <section class="dark-background " id="portfolio">
-        <div class="container entranceUp ">
+      <section class="dark-background" id="portfolio">
+        <div class="container entranceUp">
           <h1 re>My Portfolio</h1>
           <div class="card-columns wow flipInX" data-wow-duration="2s">
             <div class="card rellax" data-rellax-speed="-3">
@@ -294,7 +302,7 @@
               </div>
             </div>
 
-            <div class="card p-3 text-right  rellax" data-rellax-speed="-3">
+            <div class="card p-3 text-right rellax" data-rellax-speed="-3">
               <blockquote class="blockquote mb-0">
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -332,7 +340,14 @@
           <div class="container">
             <div class="row">
               <div class="col-md-12 entranceContactLeft contact-form">
-                <h1 class="wow bounce" id="contactHeader" data-wow-duration="2s" data-wow-iteration="10">Contact Me</h1>
+                <h1
+                  class="wow bounce"
+                  id="contactHeader"
+                  data-wow-duration="2s"
+                  data-wow-iteration="10"
+                >
+                  Contact Me
+                </h1>
                 <form>
                   <div class="form-group">
                     <input
