--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       class="navbar .navbar-dark navbar-expand-lg fixed-top row"
       id="navbar-style"
     >
-      <p class="navbar-brand ml-5 nav-text">Tzahi Tamam</p>
+      <p class="navbar-brand ml-5 nav-text"><span class="nav-text-col">T</span>zahi <span class="nav-text-col">T</span>amam</p>
 
       <button
         class="navbar-toggler"
@@ -136,7 +136,7 @@
           </div>
         </div>
         <div class="animated wow fadeInUp" data-wow-duration="2s">
-          <h1 class="lead">Tzahi Tamam</h1>
+          <h1 class="lead"><span class="nav-text-col">T</span>zahi <span class="nav-text-col">T</span>amam</h1>
           <p class="lead">QA Engineer - Front End Web Developer</p>
           <!-- <a href="#portfolio" role="button" class="btn btn-lg">My Portfolio</a> -->
         </div>
