--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
 
     <div class="cover" id="home">
       <div class="cover-text text-left">
-        <div class="snowflakes" aria-hidden="true">
-          <div class="snowflake">
+        <!-- <div class="snowflakes" aria-hidden="true"> -->
+          <!-- <div class="snowflake">
             ❅
           </div>
           <div class="snowflake">
@@ -134,7 +134,7 @@
           <div class="snowflake">
             ❄
           </div>
-        </div>
+        </div> -->
         <div class="animated wow fadeInUp" data-wow-duration="2s">
           <h1 class="lead"><span class="nav-text-col">T</span>zahi <span class="nav-text-col">T</span>amam</h1>
           <p class="lead">QA Engineer - Front End Web Developer</p>
