--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <div class="container entranceUp">
         <h1 re>My Portfolio</h1>
         <div class="card-columns ">
-          <div class="card wow zoomIn" data-wow-duration="3s" id="card1" data-rellax-speed="-3">
+          <div class="card wow zoomIn" data-wow-duration="5s"  data-wow-offset="-10"  id="card1" >
             <img class="card-img-top" src="pics/dt.png" alt="Preview DT" />
             <div class="card-body">
               <h5 class="card-title">JS, Bootstrap and JQuery</h5>
@@ -184,7 +184,7 @@
               </footer>
             </blockquote>
           </div> -->
-          <div class="card wow zoomIn" data-wow-duration="3s" data-rellax-speed="0">
+          <div class="card wow zoomIn" data-wow-duration="4s"data-rellax-speed="0">
             <img class="card-img-top" src="pics/todo.png" alt="Card image cap" />
             <div class="card-body">
               <h5 class="card-title">ToDO List Chrome Extension</h5>
@@ -196,7 +196,7 @@
             </div>
           </div>
 
-          <div class="card wow zoomIn" data-wow-duration="2s" id="card1" data-rellax-speed="-3">
+          <div class="card wow zoomIn" data-wow-duration="5s" id="card1" data-rellax-speed="-3">
             <img class="card-img-top" src="pics/promise.png" alt="Preview DT" />
             <div class="card-body">
               <h5 class="card-title">Promise</h5>
